# Teledra-v2

./: .gitignore  ASSETS_MANIFEST.md  Cargo.toml  README.md  Teledra_v2_qwen.bat  browser_agent.py  composer_harness.py  composition_analysis_report.schema.json  config.qwen.json  copilot_mic.py  copilot_vision.py  court_synthesizer.py  dream.py  generate_voice.py  get_youtube_transcript.py  incident_report.schema.json  kingdom_dashboard.py  mcp_bridge.py  music.py  music_verify.py  outreach_poster.py  python_music_editor.py  repair_authorization.schema.json  requirements-all.txt  requirements-copilot.txt  requirements-somatic.txt  requirements-tts.txt  requirements.txt  restream_listener.py  retrieve_memory.py  soak_benchmark.py  somatic_cortex_stream.py  taste_desire.py  teledra_synth.py  treasury_scout.py  work_viewer.py
.teledra/: agent_registry.draft.json  transition_table.draft.json
Fractus/: README.md  fractus_dsl.py  fractus_gui.py  fractus_model.py  fractus_protocol.py  fractus_registry.py  fractus_render.py
config/: README.md  mcp_servers.example.json  moltbook.example.json  outreach_channels.example.json
coordination/: ANTIGRAVITY_JOURNAL.md  STATUS_BOARD.md
court_synth/: feedback.py  harmony.py  instruments.py  living_music_engine.py  project_store.py  schema.py  workshop.py
knowledge/: social_links.md  taste_desire.example.json  taste_desire.json
kraken_beta/: LESSONS.md  README.md  SPEC.md  game_inventory.json  kraken.py  kraken_taskforce.bat  parse_all.py  parse_telemetry.py
src/: brain.rs  ears.rs  main.rs  mission.rs  research.rs  sidecar.rs  (+2 more)
(+336 files in other folders)
